--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,18 @@
         <!-- Security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.1.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
+            <version>4.1.3.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
+            <version>4.1.3.RELEASE</version>
         </dependency>
         <!-- View -->
         <dependency>
