--- a/src/main/resources/persistence-pgsql.properties
+++ b/src/main/resources/persistence-pgsql.properties
@@ -1,6 +1,6 @@
 dataSource.driverClassName=org.postgresql.Driver
 dataSource.url=jdbc:postgresql:postgres
-dataSource.username=postgres
+dataSource.accountname=postgres
 dataSource.password=postgres
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
