--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -4,4 +4,5 @@ dataSource.username=root
 dataSource.password=123
 
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#hibernate.hbm2ddl.auto=create
 hibernate.hbm2ddl.auto=validate
